--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
      <div class="container">
    
-        <nav>
+        <nav class="menu-nav">
 
             <a href="./index.html" class="logo">Web<span class="logo-part-black">Studio</span> </a>
 
@@ -63,30 +63,37 @@
         <h2 hidden>Components</h2>
 
     <ul class="container-text-list">
+        <div class="strategy-block">
         <li>
-
              <h3 class="container-text-title">Strategy</h3>
              <p class="container-text-descr">Our goal is to identify the business problem to walk away with the perfect and creative solution.
              </p>
         </li>
+        </div>
 
+        <div class="punctuality-block">
         <li>
             <h3 class="container-text-title">Punctuality</h3>
             <p class="container-text-descr">Bring the key message to the brand's audience for the best price within the shortest possible time.
             </p>
         </li>
+        </div>
 
+        <div class="diligence-block">
         <li>
              <h3 class="container-text-title">Diligence</h3>
              <p class="container-text-descr">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
              </p>
         </li>
+        </div>
 
+        <div class="technologies-block">
         <li>
              <h3 class="container-text-title">Technologies</h3>
              <p class="container-text-descr">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
              </p>
         </li>
+        </div>
      </ul>
     </div>
 
@@ -98,30 +105,45 @@
 
         <h2 class="info-company">Our Team</h2>
 
+        
          <ul class="team-company-list">
+
+            <div class="mark-prod-des">
+
              <li class="team-company-page">
                  <img  src="./images/img_1.jpg" alt="Product Designer" width="264" height="260"/>
                 <h3 class="team-name">Mark Guerrero</h3> 
                 <p class="team-job-title">Product Designer</p>
-            </li>
+             </li>
+             </div>
+
+        <div class="tom-front-devel">
 
             <li class="team-company-page">
                  <img src="./images/img_2.jpg" alt="Frontend Developer" width="264" height="260"/> 
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-job-title">Frontend Developer</p>
             </li>
+        </div>
+
+        <div class="camila-marketing">
 
         <li class="team-company-page">
          <img src="./images/img_3.jpg" alt="Marketing" width="264" height="260"/> 
          <h3 class="team-name">Camila Garcia</h3>
          <p class="team-job-title">Marketing</p>
         </li>
+        </div>
+
+        <div class="daniel-ui">
 
         <li class="team-company-page">
          <img src="./images/img_4.jpg" alt="UI Designer" width="264" height="260"/> 
          <h3 class="team-name">Daniel Wilson</h3>
          <p class="team-job-title">UI Designer</p>
         </li>
+        </div>
+        
         </ul>
     </div>
     </section>
@@ -131,37 +153,59 @@
     <div class="container">
 
      <h2 class="title-text-portfolio">Our Portfolio</h2>
+
          <ul class="portfolio-company-list">
+
+            <div class="item-banking">
               <li>
                  <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300" />
                  <h3 class="item-portfolio-company">Banking App</h3>
                  <p class="direction-item-portfolio-company">App</p>
              </li>
+            </div>
+
+
+             <div class="item-cash">
              <li>
                  <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300" />
                  <h3 class="item-portfolio-company">Cashless Payment</h3>
                  <p class="direction-item-portfolio-company">Marketing</p>
              </li>
+            </div>
+
+             <div class="item-meditation">
              <li>
                  <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" height="300" />
                  <h3 class="item-portfolio-company">Meditation App</h3>
                  <p class="direction-item-portfolio-company">App</p>
              </li>
+            </div>
+
+
+             <div class="item-taxi">
              <li>
                  <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300" />
                  <h3 class="item-portfolio-company">Taxi Service</h3>
                  <p class="direction-item-portfolio-company">Marketing</p>
              </li>
+            </div>
+
+
+             <div class="item-screen">
              <li>
                  <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360" height="300" />
                  <h3 class="item-portfolio-company">Screen Illustrations</h3>
                  <p class="direction-item-portfolio-company">Design</p>
              </li>
+            </div>
+
+             <div class="item-cours">
              <li>
                  <img src="./images/online_courses.jpg" alt="Online Courses" width="360" height="300" />
                  <h3 class="item-portfolio-company">Online Courses</h3>
                  <p class="direction-item-portfolio-company">Marketing</p>
         </li>
+        </div>
     </ul>
 
     </div>
